--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,38 @@
-<DOCTYPE! html>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+
+<body>
+<table border="1">
+	<tr>
+	<th> name </th>
+	<th> toothbrush color </th>
+	<th> glasses?? </th>
+	<th> month of birth</th>
+	</tr>
+	<tr>
+		<td> Adan </td>
+		<td> red </td>
+		<td> no </td>
+		<td> 11</td>
+	</tr>
+	<tr>
+		<td> Naama </td>
+		<td> blue </td>
+		<td>no</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td> matt</td>
+		<td>white</td>
+		<td>yes</td>
+		<td>12</td>
+		
+
+</body>
+</html>
